--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,9 @@
   "author": "Nana Janashia",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.3.3"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1"
   }
 }
